--- a/3d models/sheet11/Figure11.1.b.html
+++ b/3d models/sheet11/Figure11.1.b.html
@@ -9,7 +9,7 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://arun457.github.io/3Dmodels/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="model-viewer.css">
+  <link rel="stylesheet" href="https://arun457.github.io/3Dmodels/css/model-viewer.css">
   <link rel="shortcut icon" href="https://arun457.github.io/3Dmodels/images/favicon.ico" type="image/x-icon">
   <title>3D Models</title>
 
@@ -41,7 +41,7 @@
 
         <div id="holder">
           <div id="model">
-            <model-viewer src="models/Figure11.1.a.glb" alt="3D Model" camera-controls="">
+            <model-viewer src="models/Figure11.1.b.glb" alt="3D Model" camera-controls="">
             </model-viewer>
           </div>
         </div>
@@ -54,7 +54,7 @@
         <!-- Paste your Sectional View Here -->
         <div id="holder">
           <div id="model">
-            <model-viewer src="models/Figure11.1.a-section.glb" alt="3D Model" camera-controls="">
+            <model-viewer src="models/Figure11.1.b-section.glb" alt="3D Model" camera-controls="">
             </model-viewer>
           </div>
         </div>
@@ -65,7 +65,7 @@
       <!-- -------------------------------------------------------------------------------------------------->
       <div class="tab-pane fade show" id="orthographic" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the Orthographic projection Here -->
-        <img id="orthographic" src="orthographic/Figure11.1.a.jpg" alt="Orthographic Projection">
+        <img id="orthographic" src="orthographic/Figure11.1.b.jpg" alt="Orthographic Projection">
 
         <!-- End of Orthographic projection -->
       </div>
