--- a/contents.html
+++ b/contents.html
@@ -22,6 +22,8 @@
 
   <a href="sheet7.html"><img src="images\sheet7.jpg"></a>
 
+  <a href="sheet11.html"><img src="images\sheet11.jpg"></a>
+
 
 
   <h1>Click below to download original 3d models</h1>
