--- a/contents.html
+++ b/contents.html
@@ -26,7 +26,7 @@
 
 
 
-  <h1>Click below to download original 3d models</h1>
+  <!-- <h1>Click below to download original 3d models</h1>
   <p><a href="https://drive.google.com/drive/folders/1dnymR19-vr2lWZQ6PAfVvvvS2LjGFTlr?usp=sharing">Link 1</a></p>
   <p><a href="https://mega.nz/folder/WxtWUCzT#-Lk9-_Zv3Fx6ICDbhFTWLg">Link 2</a></p>
   <h1>Open it with 3d viewer for Windows 10</h1>
@@ -38,7 +38,7 @@
   <iframe width="972" height="547" src="https://www.youtube.com/embed/SawLCr6lCxc" class="youtube-video"
     title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen></iframe>
+    allowfullscreen></iframe> -->
 
   <h1>.......................................................</h1>
   <h1> ..........................................</h1>
