--- a/contents.html
+++ b/contents.html
@@ -22,6 +22,10 @@
 
   <a href="sheet7.html"><img src="images/sheets/sheet7.jpg"></a>
 
+  <a href="sheet8.html"><img src="images/sheets/sheet8.jpg"></a>
+
+  <a href="sheet9.html"><img src="images/sheets/sheet9.jpg"></a>
+
   <a href="sheet10.html"><img src="images/sheets/sheet10.jpg"></a>
 
   <a href="sheet11.html"><img src="images/sheets/sheet11.jpg"></a>
