--- a/3d models/sheet6/FigureP6.5.html
+++ b/3d models/sheet6/FigureP6.5.html
@@ -48,7 +48,7 @@
       <!-- -------------------------------------------------------------------------------------------------->
       <div class="tab-pane fade show" id="orthographic" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the Orthographic projection Here -->
-        <img id="orthographic" src="orthographic/FigureP6.5.png" alt="Orthographic Projection">
+        <img id="orthographic" src="orthographic/FigureP6.5.jpg" alt="Orthographic Projection">
 
         <!-- End of Orthographic projection -->
       </div>
